HTML 구조 수정: 스타일 시트 링크 위치 조정 및 불필요한 스타일 태그 제거

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>계산기</title>
-  <style>
-    :root {
-      <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
     <div class="header">
       <h1>수식 계산기</h1>
       <div style="display:flex; gap:8px; align-items:center;">
